JVM-538 Cassandra 4 JDK 21 Port (#416)