@@ -17,7 +17,7 @@
 #
 #
 ###########################################################################
-#                         jvm11-server.options                            #
+#                         jvm21-server.options                            #
 #                                                                         #
 # See jvm-server.options. This file is specific for Java 11 and newer.    #
 ###########################################################################
@@ -27,81 +27,67 @@
 #################
 
 
-
-### CMS Settings
--XX:+UseConcMarkSweepGC
--XX:+CMSParallelRemarkEnabled
--XX:SurvivorRatio=8
--XX:MaxTenuringThreshold=1
--XX:CMSInitiatingOccupancyFraction=75
--XX:+UseCMSInitiatingOccupancyOnly
--XX:CMSWaitDuration=10000
--XX:+CMSParallelInitialMarkEnabled
--XX:+CMSEdenChunksRecordAlways
-## some JVMs will fill up their heap when accessed via JMX, see CASSANDRA-6541
--XX:+CMSClassUnloadingEnabled
-
-
-
-### G1 Settings
-## Use the Hotspot garbage-first collector.
-#-XX:+UseG1GC
-#-XX:+ParallelRefProcEnabled
-#-XX:MaxTenuringThreshold=1
-#-XX:G1HeapRegionSize=16m
-
-# Disable biased locking as it does not benefit Cassandra.
--XX:-UseBiasedLocking
-
-#
-## Have the JVM do less remembered set work during STW, instead
-## preferring concurrent GC. Reduces p99.9 latency.
-#-XX:G1RSetUpdatingPauseTimePercent=5
-#
-## Main G1GC tunable: lowering the pause target will lower throughput and vise versa.
-## 200ms is the JVM default and lowest viable setting
-## 1000ms increases throughput. Keep it smaller than the timeouts in cassandra.yaml.
-
-# (NFLX): we think the above is great for throughput-optimized benchmarks but bad for
-# our systems, which are frequently latency-critical.
-
-#-XX:MaxGCPauseMillis=300
-
-## Optional G1 Settings
-# Save CPU time on large (>= 16GB) heaps by delaying region scanning
-# until the heap is 70% full. The default in Hotspot 8u40 is 40%.
-# (NFLX): we think the above ^ is bad advice. It forces too much work to be
-# done during mixed-mode pauses, whereas we prefer to get work done
-# concurrently.
-#-XX:InitiatingHeapOccupancyPercent=30
-
-# For systems with > 8 cores, the default ParallelGCThreads is 5/8 the number of logical cores.
-# Otherwise equal to the number of cores when 8 or less.
-# Machines with > 10 cores should try setting these to <= full cores.
-#-XX:ParallelGCThreads=16
-# By default, ConcGCThreads is 1/4 of ParallelGCThreads.
-# Setting both to the same value can reduce STW durations.
-#-XX:ConcGCThreads=16
-
-
 ### JPMS
 
 -Djdk.attach.allowAttachSelf=true
+-Djava.security.manager=allow
+-Djdk.reflect.useDirectMethodHandle=false
+
+-XX:+UseZGC
+-XX:+ZGenerational
+-XX:-UseCompressedOops
+-XX:+UseTransparentHugePages
+
 --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
 --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
 --add-exports java.base/sun.nio.ch=ALL-UNNAMED
 --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
 --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
 --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
+--add-exports java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
 --add-exports java.sql/java.sql=ALL-UNNAMED
+--add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
 
---add-opens java.base/java.lang.module=ALL-UNNAMED
 --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
 --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
 --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
 --add-opens java.base/jdk.internal.math=ALL-UNNAMED
 --add-opens java.base/jdk.internal.module=ALL-UNNAMED
---add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
+--add-opens java.base/jdk.internal.vm=ALL-UNNAMED
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.lang.module=ALL-UNNAMED
+--add-opens java.base/java.lang.ref=ALL-UNNAMED
+--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens java.base/java.lang.invoke=ALL-UNNAMED
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/java.net=ALL-UNNAMED
+--add-opens java.base/java.nio=ALL-UNNAMED
+--add-opens java.base/java.nio.charset=ALL-UNNAMED
+--add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+--add-opens java.base/java.nio.file.attribute=ALL-UNNAMED
+--add-opens java.base/java.math=ALL-UNNAMED
+--add-opens java.base/java.security=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.util.jar=ALL-UNNAMED
+--add-opens java.base/java.util.zip=ALL-UNNAMED
+--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+--add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+--add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens java.base/sun.nio.fs=ALL-UNNAMED
+--add-opens java.base/sun.reflect.generics.repository=ALL-UNNAMED
+--add-opens java.base/sun.reflect.generics.tree=ALL-UNNAMED
+--add-opens java.base/sun.security.x509=ALL-UNNAMED
+--add-opens java.base/sun.security.util=ALL-UNNAMED
+--add-opens java.base/sun.util.locale=ALL-UNNAMED
+--add-opens java.base/sun.util.locale.provider=ALL-UNNAMED
+--add-opens java.base/com.sun.crypto.provider=ALL-UNNAMED
+--add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
+--add-opens java.logging/java.util.logging=ALL-UNNAMED
+--add-opens=java.management/javax.management=ALL-UNNAMED
+--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
 
 
@@ -129,6 +115,5 @@
 # creation of direct buffers using Unsafe. Without it, this falls back to ByteBuffer.allocateDirect which has
 # inferior performance and risks exceeding MaxDirectMemory
 -Dio.netty.tryReflectionSetAccessible=true
---illegal-access=permit
 
 # The newline in the end of file is intentional
